feat: add landing page (#2)
Static HTML/CSS/JS landing page with constellation canvas animation,
feature grid, app screenshot, and scroll-driven animations.
Tokyo Night palette, Instrument Serif typography, responsive layout.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "build": "bun run --cwd desktop build",
     "test": "bun run --cwd desktop test",
     "rebuild": "bun run --cwd desktop rebuild",
-    "dist": "bun run --cwd desktop dist"
+    "dist": "bun run --cwd desktop dist",
+    "landing": "bunx serve landing-page"
   }
 }
