--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "constellagent-root",
   "private": true,
   "scripts": {
+    "postinstall": "bun install --cwd desktop",
     "dev": "bun run --cwd desktop dev",
     "build": "bun run --cwd desktop build",
     "test": "bun run --cwd desktop test",
